--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,9 +9,7 @@ on:
 jobs:
 
   build:
-
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: docker login
@@ -20,11 +18,20 @@ jobs:
           DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
         run: |
           docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-      - name: Build the Docker image
+      - name: Build the experitest-jnlp Docker image
         working-directory: ./exp-tools
         env:
           DOCKER_USER: ${{secrets.DOCKER_USER}}
         run: docker build . --file Dockerfile --tag $DOCKER_USER/experitest-jnlp:latest
 
-      - name: Docker Push
+      - name: Docker Push experitest-jnlp
         run: docker push krishnom/experitest-jnlp:latest
+
+      - name: Build the atlantis Docker image
+        working-directory: ./atlantis
+        env:
+          DOCKER_USER: ${{secrets.DOCKER_USER}}
+        run: docker build . --file Dockerfile --tag $DOCKER_USER/atlantis-awscli:latest
+
+      - name: Docker Push atlantis
+        run: docker push krishnom/atlantis-awscli:latest
